added shadow box at card

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,9 @@ li {
 .container-fluid {
   background-color: red;
 }
+.card {
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
 
 @media (max-width: 768px) {
   .col-4 {
